Correct padding to reduce gap between content and navbar, begin adding screenshots to README

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
   color: #f0f0f0;
   /* Light gray text for contrast */
   padding: 2rem 2rem 2rem 2rem;
-  padding-top: 100px; /* Adjusted to ensure content isn't hidden by navbar */
+  padding-top: 50px; /* Adjusted to ensure content isn't hidden by navbar */
   line-height: 1.6; /* More readable line spacing */
 }
 
@@ -451,7 +451,7 @@ textarea:focus {
 @media (max-width: 768px) {
   body {
     padding: 10px;
-    padding-top: 130px;
+    padding-top: 80px;
   }
 
   .info-card,
@@ -463,11 +463,12 @@ textarea:focus {
 }
 
 /* Medium devices (tablets only) — fix 3rd info-card layout */
-@media (min-width: 768px) and (max-width: 991.98px) {
+@media (min-width: 768px) {
   .center-on-md {
     margin-left: auto;
     margin-right: auto;
     float: none;
+    padding-top: 80px;
   }
 }
 
